--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 
-# Created by https://www.gitignore.io/api/java,macos,windows,eclipse
-# Edit at https://www.gitignore.io/?templates=java,macos,windows,eclipse
+# Created by https://www.gitignore.io/api/java,macos,maven,windows,eclipse,java-web
+# Edit at https://www.gitignore.io/?templates=java,macos,maven,windows,eclipse,java-web
 
 ### Eclipse ###
-build/
 .metadata
 bin/
 tmp/
@@ -11,12 +10,11 @@ tmp/
 *.bak
 *.swp
 *~.nib
-src/DB/
 local.properties
 .settings/
 .loadpath
 .recommenders
-jdbc.properties
+*.properties
 
 # External tool builders
 .externalToolBuilders/
@@ -99,12 +97,15 @@ jdbc.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+### Java-Web ###
+## ignoring target file
+target/
+
 ### macOS ###
 # General
 .DS_Store
 .AppleDouble
 .LSOverride
-
 
 # Icon must end with two \r
 Icon
@@ -127,6 +128,18 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+### Maven ###
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+.flattened-pom.xml
 
 ### Windows ###
 # Windows thumbnail cache files
@@ -154,7 +167,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/java,macos,windows,eclipse
-
-
-
+# End of https://www.gitignore.io/api/java,macos,maven,windows,eclipse,java-web
